Fixed footer on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -2612,7 +2612,8 @@ form#newsletter input[type=submit] {
 	}
 
 	.slogan {
-		display: none;
+		/*display: none;*/
+		font-size: 14px;
 	}
 
 	.da-slide p {
@@ -2709,8 +2710,8 @@ form#newsletter input[type=submit] {
 	
 }
 
-/* Mobile Landscape Size to Tablet Portrait (devices and browsers)
-====================================================================== */
+ Mobile Landscape Size to Tablet Portrait (devices and browsers)
+====================================================================== 
 @media only screen and (min-width: 480px) and (max-width: 767px) {
 	
 	body {
@@ -2842,6 +2843,12 @@ form#newsletter input[type=submit] {
 	.aboutLogo {
 		position: relative;
 		left: 15px;
+	}
+
+	iframe {
+		position: relative;
+		left: 30px;
+		width: 300px;
 	}
 
 
